Fixed image source text wrap

--- a/src/components/PokemonImage.css
+++ b/src/components/PokemonImage.css
@@ -26,6 +26,7 @@ span.source-hover {
   -moz-transition: opacity 500ms;
   -o-transition: opacity 500ms;
   transition: opacity 500ms;
+  word-wrap: break-word;
 }
 
 span.source-hover span {
